clusters/cluster0/kubernetes/apps/media/sonarr/app/sonarr-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  hostnames:
  - sonarr.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: sonarr-service
      port: 8989
    matches:
    - path:
        type: PathPrefix
        value: /
